@@ -15,12 +15,12 @@
  */
 package org.apache.ibatis.type;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 public class ShortTypeHandlerTest extends BaseTypeHandlerTest {
 
@@ -37,10 +37,10 @@ public class ShortTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromResultSetByName() throws Exception {
     when(rs.getShort("column")).thenReturn((short) 100);
-    assertEquals(new Short((short) 100), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Short.valueOf((short) 100), TYPE_HANDLER.getResult(rs, "column"));
 
     when(rs.getShort("column")).thenReturn((short) 0);
-    assertEquals(new Short((short) 0), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Short.valueOf((short) 0), TYPE_HANDLER.getResult(rs, "column"));
   }
 
   @Override
@@ -55,10 +55,10 @@ public class ShortTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromResultSetByPosition() throws Exception {
     when(rs.getShort(1)).thenReturn((short) 100);
-    assertEquals(new Short((short) 100), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Short.valueOf((short) 100), TYPE_HANDLER.getResult(rs, 1));
 
     when(rs.getShort(1)).thenReturn((short) 0);
-    assertEquals(new Short((short) 0), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Short.valueOf((short) 0), TYPE_HANDLER.getResult(rs, 1));
   }
 
   @Override
@@ -73,10 +73,10 @@ public class ShortTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromCallableStatement() throws Exception {
     when(cs.getShort(1)).thenReturn((short) 100);
-    assertEquals(new Short((short) 100), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Short.valueOf((short) 100), TYPE_HANDLER.getResult(cs, 1));
 
     when(cs.getShort(1)).thenReturn((short) 0);
-    assertEquals(new Short((short) 0), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Short.valueOf((short) 0), TYPE_HANDLER.getResult(cs, 1));
   }
 
   @Override
